Fixed gap on expand

--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ body {
     color: black; 
     display: flex;
     flex-direction: row; 
-    flex-flow: row wrap;  
+    flex-flow: row wrap;
+    row-gap: 30px; 
 }
 
 /* The hearts, start */
@@ -151,7 +152,7 @@ body {
     height: auto;
 }
 
-.w3-display-container .heart {
+.w3-display-container svg {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -192,7 +193,7 @@ body {
 
 /*Inside of cards*/
 .w3-display-container {
-    padding: 0px 0px 10px 0px;
+    padding: 0px 0px 0px 0px;
     border-radius: 8px 8px 8px 8px; 
     background-color: #363636;
     margin: 10px;
@@ -328,8 +329,8 @@ body {
 
 /* For icons in expanded card */
 .drinks-icon {
-    height: 40px;
-    position: relative;
+    height: 45px;
+    position: relative !important;
 }
   
 /* Expanded card */
@@ -345,11 +346,11 @@ body {
 /* Styles for drinks list */
 .drinks-list {
     margin-top: 40px;
-    margin-left: 20px;
+    margin-left: 40px;
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: repeat(2);
+    grid-template-columns: 10% 90%;
     gap: 0.5rem;
-    align-items: center;
 }
 
 .arrow-up {
